sysutils/zrep: update

--- a/sysutils/zrep/Makefile
+++ b/sysutils/zrep/Makefile
@@ -1,18 +1,18 @@
-
 PORTNAME=	zrep
-PORTVERSION=	1.8.0
+DISTVERSION=	2.0.2
 DISTVERSIONPREFIX=	v
 CATEGORIES=	sysutils
 
 MAINTAINER=	neel@neelc.org
 COMMENT=	ZFS based replication and failover solution
+WWW=		http://www.bolthole.com/solaris/zrep/
 
 LICENSE=	bolthole
 LICENSE_NAME=	bolthole
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 LICENSE_PERMS=	no-dist-mirror no-dist-sell no-pkg-mirror no-pkg-sell
 
-#RUN_DEPENDS=	ksh93:shells/ksh93
+RUN_DEPENDS=	bash:shells/bash
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	bolthole
@@ -21,9 +21,6 @@ PLIST_FILES=	bin/zrep
 
 NO_ARCH=	yes
 NO_BUILD=	yes
-
-#post-patch:
-#	@${REINPLACE_CMD} -e 's|#!/bin/ksh -p|#!${LOCALBASE}/bin/ksh93 -p|' ${WRKSRC}/zrep
 
 do-install:
 	${INSTALL_SCRIPT} ${WRKSRC}/${PORTNAME} ${STAGEDIR}/${PREFIX}/bin
