--- a/x11-fm/pcmanfm/Makefile
+++ b/x11-fm/pcmanfm/Makefile
@@ -1,11 +1,12 @@
 PORTNAME=	pcmanfm
 PORTVERSION=	1.3.2
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	x11-fm
 MASTER_SITES=	SF/${PORTNAME}/PCManFM%20%2B%20Libfm%20%28tarball%20release%29/PCManFM/
 
 MAINTAINER=	midnightbsd@BSDforge.com
 COMMENT=	PCMan File Manager
+WWW=		http://wiki.lxde.org/en/PCManFM
 
 LICENSE=	gpl2
 
@@ -23,11 +24,12 @@ gtk3_LIB_DEPENDS=	libfm-gtk3.so:x11/libfm@gtk3
 gtk2_CONFLICTS_INSTALL=	pcmanfm-gtk3
 gtk3_CONFLICTS_INSTALL=	pcmanfm
 
-USES=		desktop-file-utils gmake gnome gettext libtool localbase \
+USES=		cpe desktop-file-utils gmake gnome gettext libtool localbase \
 		pkgconfig tar:xz xorg
 USE_GNOME=	cairo gdkpixbuf2 intltool
 USE_XORG=	x11
 GNU_CONFIGURE=	yes
+CPE_VENDOR=	${PORTNAME}_project
 
 .if ${FLAVOR:Mgtk2}
 USE_GNOME+=	gtk20
