--- a/x11/listres/Makefile
+++ b/x11/listres/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	listres
-PORTVERSION=	1.0.4
-PORTREVISION=	2
+PORTVERSION=	1.0.6
 CATEGORIES=	x11
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -8,7 +7,7 @@ COMMENT=	List resources in widgets
 
 LICENSE=	mit
 
-USES=		xorg xorg-cat:app
+USES=		tar:xz xorg xorg-cat:app
 USE_XORG=	x11 xaw xmu xorgproto xt
 
 PLIST_FILES=	bin/listres share/man/man1/listres.1.gz
