--- a/graphics/libdrm/Makefile
+++ b/graphics/libdrm/Makefile
@@ -1,38 +1,26 @@
 PORTNAME=	libdrm
-PORTVERSION=	2.4.119
+PORTVERSION=	2.4.123
 PORTEPOCH=	1
-CATEGORIES=	graphics x11
+CATEGORIES=	graphics
 MASTER_SITES=	https://dri.freedesktop.org/libdrm/
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Userspace interface to kernel Direct Rendering Module services
-
-MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Userspace interface to kernel Direct Rendering Module services
+COMMENT=	Direct Rendering Manager library and headers
 WWW=		https://dri.freedesktop.org/
 
 LICENSE=	mit
 
+BUILD_DEPENDS=	rst2man:textproc/py-docutils
 LIB_DEPENDS=	libpciaccess.so:devel/libpciaccess
-
-#USE_GCC=	yes
-NO_TEST=	yes
 
 USES=		gnome meson pkgconfig tar:xz
 USE_LDCONFIG=	yes
 MESON_ARGS=	-Dvalgrind=disabled
 
-OPTIONS_DEFINE=	MANPAGES TESTS
+OPTIONS_DEFINE=	TESTS
 OPTIONS_SUB=	yes
 
 TESTS_DESC=	Build and install test programs
-
-.if defined(PACKAGE_BUILDING)
-OPTIONS_DEFAULT+=	MANPAGES
-.endif
-
-MANPAGES_BUILD_DEPENDS=	rst2man:textproc/py-docutils
-MANPAGES_MESON_ENABLED=	man-pages
 
 TESTS_MESON_TRUE=	install-test-programs
 
@@ -48,6 +36,8 @@ MESON_ARGS+=	-Domap=disabled \
 		-Detnaviv=disabled \
 		-Dnouveau=disabled
 
+MESON_ARGS+=	-Dman-pages=enabled
+
 .include <bsd.mport.options.mk>
 
 .if ${ARCH} == amd64 || ${ARCH} == i386
@@ -59,41 +49,44 @@ MESON_ARGS+=	-Dvmwgfx=disabled \
 .endif
 
 .if ${ARCH} == amd64 || ${ARCH} == i386
+PLIST_SUB+=	AMD_DRIVERS=""
 PLIST_SUB+=	ARM_DRIVERS="@comment "
 PLIST_SUB+=	INTEL_DRIVER=""
-PLIST_SUB+=	NOUVEAU_DRIVER=""
 PLIST_SUB+=	RADEON_DRIVERS=""
 PLIST_SUB+=	VMWGFX_DRIVERS=""
 .elif ${ARCH:Mpowerpc*}
+PLIST_SUB+=	AMD_DRIVERS=""
 PLIST_SUB+=	ARM_DRIVERS="@comment "
 PLIST_SUB+=	INTEL_DRIVER="@comment "
-PLIST_SUB+=	NOUVEAU_DRIVER=""
 PLIST_SUB+=	RADEON_DRIVERS=""
 PLIST_SUB+=	VMWGFX_DRIVERS="@comment "
 .elif ${ARCH} == aarch64
+PLIST_SUB+=	AMD_DRIVERS=""
 PLIST_SUB+=	ARM_DRIVERS=""
 PLIST_SUB+=	INTEL_DRIVER="@comment "
-PLIST_SUB+=	NOUVEAU_DRIVER=""
 PLIST_SUB+=	RADEON_DRIVERS=""
 PLIST_SUB+=	VMWGFX_DRIVERS="@comment "
 .elif ${ARCH:Marm*}
+PLIST_SUB+=	AMD_DRIVERS=""
 PLIST_SUB+=	ARM_DRIVERS=""
 PLIST_SUB+=	INTEL_DRIVER="@comment "
-PLIST_SUB+=	NOUVEAU_DRIVER="@comment "
 PLIST_SUB+=	RADEON_DRIVERS=""
 PLIST_SUB+=	VMWGFX_DRIVERS="@comment "
 .elif ${ARCH} == riscv64
+PLIST_SUB+=	AMD_DRIVERS=""
 PLIST_SUB+=	ARM_DRIVERS="@comment "
 PLIST_SUB+=	INTEL_DRIVER="@comment "
-PLIST_SUB+=	NOUVEAU_DRIVER="@comment "
 PLIST_SUB+=	RADEON_DRIVERS=""
 PLIST_SUB+=	VMWGFX_DRIVERS="@comment "
 .else
+PLIST_SUB+=	AMD_DRIVERS="@comment "
 PLIST_SUB+=	ARM_DRIVERS="@comment "
 PLIST_SUB+=	INTEL_DRIVER="@comment "
-PLIST_SUB+=	NOUVEAU_DRIVER="@comment "
 PLIST_SUB+=	RADEON_DRIVERS="@comment "
 PLIST_SUB+=	VMWGFX_DRIVERS="@comment "
 .endif
+
+post-patch:
+	${REINPLACE_CMD} 's|Linux|MidnightBSD|g' ${WRKSRC}/symbols-check.py
 
 .include <bsd.port.mk>
