--- a/devel/subversion-lts/Makefile
+++ b/devel/subversion-lts/Makefile
@@ -2,11 +2,10 @@ PORTREVISION=	0
 PKGNAMESUFFIX=	-lts
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Version control system, long-time-support version
+COMMENT=	Version control system, long-term-support version
+WWW=		https://subversion.apache.org/
 
-CONFLICTS_INSTALL=	subversion-1.[0-9].[0-9]* \
-			subversion-1.1[0-9].[0-9]* \
-			subversion1[0-9]-1.[0-9].[0-9]*
+CONFLICTS_INSTALL=	subversion
 
 USE_RC_SUBR=	svnserve
 
@@ -15,27 +14,25 @@ PORTDOCS=	BUGS CHANGES COMMITTERS INSTALL README
 OPTIONS_DEFINE=	\
 		BDB		\
 		DOCS		\
-		GPG_AGENT \
+		GPG_AGENT 	\
 		NLS		\
 		SASL		\
 		SERF		\
-		STATIC		\
 		SVNSERVE_WRAPPER\
 		TEST		\
 		TOOLS
 
-OPTIONS_DEFAULT=SERF TOOLS
+OPTIONS_DEFAULT=GPG_AGENT SERF TOOLS
 
 GPG_AGENT_DESC=		Enable GPG agent password store
 SERF_DESC=		WebDAV/Delta-V (HTTP/HTTPS) repo access module
-STATIC_DESC=		Build static version (no shared libs)
 SVNSERVE_WRAPPER_DESC=	Enable svnserve wrapper (umask setter)
 TEST_DESC=		Run subversion test suite
 TOOLS_DESC=		Install several tools
 
 SVNSERVE_WRAPPER_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-svnserve-wrapper
 
-USES+=			shebangfix python:2.7,env
+USES+=			shebangfix python:env
 python_OLD_CMD+=	"/bin/env python"
 SHEBANG_REGEX=		./tools/.*
 
@@ -46,32 +43,26 @@ SVNFSTYPE?=	fsfs
 SVNGROUP?=	svn
 SVNUSER?=	svn
 
-CONFIGURE_ARGS+=	--without-gnome-keyring \
+GNU_CONFIGURE_MANPREFIX=	${PREFIX}/share
+CONFIGURE_ARGS+=	--without-swig-perl \
+			--without-swig-python \
+			--without-swig-ruby \
+			--without-gnome-keyring \
 			--without-kwallet \
 			--with-apxs=no
 
 .if ${PORT_OPTIONS:MSVNSERVE_WRAPPER}
 SUB_LIST+=	SVNSERVE_BIN_EXT=".bin"
 PLIST_SUB+=	NO_SVNSERVE_WRAPPER="@comment "
+SVNSERVE_EXT=	.bin
 .else
 SUB_LIST+=	SVNSERVE_BIN_EXT=""
 PLIST_SUB+=	NO_SVNSERVE_WRAPPER=""
+SVNSERVE_EXT=
 .endif
 
 .if ${PORT_OPTIONS:MTEST}
 TEST_DEPENDS=	${PYTHON_PKGNAMEPREFIX}sqlite3>0:databases/py-sqlite3@${PY_FLAVOR}
-.endif
-
-.if ${PORT_OPTIONS:MSTATIC}
-.  if ${PORT_OPTIONS:MNLS}
-USES+=			gettext-tools
-.  endif
-.  if ${PORT_OPTIONS:MBDB}
-BDB_BUILD_DEPENDS=	yes
-.  endif
-OLD_LIB_DEPENDS:=	${LIB_DEPENDS:S!^!${LOCALBASE}/lib/!:C!(\.so|\.[0-9]+)?:!.a:!}
-BUILD_DEPENDS+=		${OLD_LIB_DEPENDS}
-LIB_DEPENDS=
 .endif
 
 .if make(repository)
@@ -81,6 +72,14 @@ WITH_REPOSITORY_CREATION=	yes
 .if defined(WITH_REPOSITORY_CREATION)
 MKREPOS_TARGET=	_mkrepos
 .endif
+
+BINS_TO_STRIP= svn svnadmin svnbench svndumpfilter svnfsfs svnlook svnmucc \
+		svnrdump svnserve${SVNSERVE_EXT} svnsync svnversion
+
+TOOLS_TO_STRIP=	fsfs-access-map svn-mergeinfo-normalizer \
+		 svn-populate-node-origins-index svnauthz \
+		 svnauthz-validate svnconflict svndiff svndiff3 \
+		 svndiff4 svnmover svnraisetreeconflict x509-parser
 
 pre-everything::
 	@${ECHO_MSG} ""
@@ -103,29 +102,20 @@ pre-everything::
 .endif
 
 	@${ECHO_MSG} ""
-.if ${PORT_OPTIONS:MSTATIC}
-	@${ECHO_MSG} "Static binaries will be built."
-.endif # STATIC
 	@${ECHO_MSG} "Many useful scripts will be installed into ${DATADIR}"
 
 pre-configure:
 .if ${PORT_OPTIONS:MBDB}
 	@BDB_VERSION=`${APR_APU_DIR}/${APU_CONFIG} --db-version`; \
-	if [ "$${BDB_VERSION}" != "4" -a "$${BDB_VERSION}" != "5" -a "$${BDB_VERSION}" != "6" ] ; then \
+	if [ "$${BDB_VERSION}" != "5" -a "$${BDB_VERSION}" != "185" ] ; then \
 		${ECHO_MSG} "" ; \
-		${ECHO_MSG} 'You should build `'"devel/apr1' with Berkeley DB (4, 5 or 6) support to use subversion with it." ; \
+		${ECHO_MSG} 'You should build `'"devel/apr1' with Berkeley DB (5, or 18) support to use subversion with it." ; \
 		${ECHO_MSG} 'Please rebuild `'"devel/apr1' with option "'`'"BDB' and try again." ; \
 		${ECHO_MSG} "" ; \
 		${ECHO_MSG} "Or you can disable Berkeley DB support. Only 'fs' repository backend will be available." ; \
 		${ECHO_MSG} "" ; \
 		${FALSE} ; \
 	fi
-.endif
-.if ${PORT_OPTIONS:MSTATIC}
-LIBS_SQLITE3!=	pkgconf --libs --static sqlite3
-LIBS+=		${LIBS_SQLITE3}
-# for work with ICU
-LIBS+=		-lc++ -lm
 .endif
 
 post-configure:
@@ -145,21 +135,23 @@ post-build-TOOLS-on:
 	@${MAKE} -C ${WRKSRC} tools ${MAKE_ARGS}
 
 post-install:	${MKREPOS_TARGET}
-	-@${STRIP_CMD} ${STAGEDIR}${PREFIX}/bin/*
+	for F in ${BINS_TO_STRIP} ; do \
+	 ${STRIP_CMD} "${STAGEDIR}${PREFIX}/bin/$${F}" ; \
+	done
+	@${STRIP_CMD} ${STAGEDIR}${PREFIX}/lib/*.so
 	@${MKDIR} ${STAGEDIR}${DATADIR}
 	(cd ${WRKSRC}/tools.examples && ${TAR} --exclude '*.in' -cf - * | ${TAR} -C ${STAGEDIR}${DATADIR} -xof - )
 	@${MKDIR} ${STAGEDIR}${DOCSDIR}
 	${INSTALL_DATA} ${PORTDOCS:S|^|${WRKSRC}/|} ${STAGEDIR}${DOCSDIR}
-
-post-install-STATIC-off:
-	-@${STRIP_CMD} ${FAKE_DESTDIR}${PREFIX}/lib/*.so
 
 post-install-SVNSERVE_WRAPPER-on:
 	@${INSTALL_SCRIPT} ${FILESDIR}/svnserve.wrapper ${FAKE_DESTDIR}${PREFIX}/bin/svnserve.sample
 
 post-install-TOOLS-on:
 	@${MAKE} -C ${WRKSRC} install-tools ${MAKE_ARGS} ${FAKE_MAKEARGS}
-	-@${STRIP_CMD} ${FAKE_DESTDIR}${PREFIX}/bin/*
+	for F in ${TOOLS_TO_STRIP} ; do \
+	 ${STRIP_CMD} "${FAKE_DESTDIR}${PREFIX}/bin/$${F}" ; \
+	done
 
 # ===============================================================================
 repository:	_mkrepos
@@ -213,8 +205,7 @@ _mkrepos:	.USE
 .endif
 
 svn-build-outputs-hack:
-	(cd ${WRKSRC} && ${PATCH} ${PATCH_DIST_ARGS} -p0 < ${PATCHDIR}/extra-patch-build.conf)
-	(cd ${WRKSRC} && python2.7 gen-make.py --release --installed-libs libsvn_client,libsvn_delta,libsvn_diff,libsvn_fs,libsvn_fs_x,libsvn_ra,libsvn_repos,libsvn_subr,libsvn_wc)
+	(cd ${WRKSRC} && python gen-make.py --release --installed-libs libsvn_client,libsvn_delta,libsvn_diff,libsvn_fs,libsvn_fs_x,libsvn_ra,libsvn_repos,libsvn_subr,libsvn_wc)
 	${MV} ${WRKSRC}/build-outputs.mk ${FILESDIR}/build-outputs.mk.addons
 
 .include <bsd.port.post.mk>
