--- a/devel/subversion-lts/Makefile.common
+++ b/devel/subversion-lts/Makefile.common
@@ -1,7 +1,5 @@
-# Created by: rooneg@electricjellyfish.net
-
 PORTNAME?=	subversion
-PORTVERSION=	1.10.8
+PORTVERSION=	1.14.5
 PORTREVISION?=	0
 CATEGORIES+=	devel
 MASTER_SITES=	APACHE/subversion
@@ -19,19 +17,18 @@ CONFLICTS_INSTALL+=	${PKGNAMEPREFIX}${PORTNAME}${PKGNAMESUFFIX}-1.[0-9].[0-9]* \
 			${PKGNAMEPREFIX}${PORTNAME}${PKGNAMESUFFIX}-1.1[0-9].[0-9]*
 
 LIB_DEPENDS+=		libapr-1.so:devel/apr1 \
+			libsqlite3.so:databases/sqlite3 \
 			libexpat.so:textproc/expat2 \
 			libutf8proc.so:textproc/utf8proc \
 			liblz4.so:archivers/liblz4
 
-CONFIGURE_ARGS+=	--without-swig \
-			--with-sqlite=/usr \
-			--with-expat=${LOCALBASE}/include:${LOCALBASE}/lib:expat
+CONFIGURE_ARGS+=	--with-expat=${LOCALBASE}/include:${LOCALBASE}/lib:expat
 
 # ===============================================================
 OPTIONS_SUB=			yes
 
-BDB_CONFIGURE_ON=		--enable-bdb6
-BDB_CONFIGURE_OFF=		--without-berkeley-db
+BDB_CONFIGURE_WITH=		berkeley-db
+BDB_CONFIGURE_ENABLE=	bdb6
 BDB_USES=			bdb
 
 NLS_CONFIGURE_OFF=		--disable-nls
@@ -50,8 +47,6 @@ GPG_AGENT_CONFIGURE_ON=		--with-gpg-agent
 GPG_AGENT_BUILD_DEPENDS=	gpg-agent:security/gnupg
 GPG_AGENT_RUN_DEPENDS=		gpg-agent:security/gnupg
 
-STATIC_CONFIGURE_ON=		--enable-all-static PKG_CONFIG="${LOCALBASE}/bin/pkg-config --static"
-
 # ===============================================================
 .include <bsd.mport.options.mk>
 
@@ -64,28 +59,14 @@ APU_CONFIG=	${LOCALBASE}/bin/apu-1-config
 
 CONFIGURE_ARGS+=--with-apr=${APR_CONFIG} --with-apr-util=${APU_CONFIG}
 
-.if ${ARCH} == "amd64" || ${ARCH} == "ia64"
+.if ${ARCH} == "amd64"
 CFLAGS+=	-fpic -DPIC
 .endif
 
 OPTIONS_FILE_UNSET?=""
 OPTIONS_FILE_SET?=""
 
-.if ( ${PORT_OPTIONS:MFREEBSD_TEMPLATE} || !${OPTIONS_FILE_UNSET:MFREEBSD_TEMPLATE} ) && defined(ORGANIZATION)
-CFLAGS+=	-DHAS_ORGANIZATION_NAME
-.endif
-
 .include <bsd.port.pre.mk>
-
-pre-everything::
-.if defined(SVN_BUILD_ADDONS)
-.if ${PORT_OPTIONS:MSTATIC} || ${OPTIONS_FILE_SET:MSTATIC}
-	@${ECHO_MSG} "!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
-	@${ECHO_MSG} "!!! addons (bindings, mod_dav_svn, etc). and static build are not compatible !!!"
-	@${ECHO_MSG} "!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!"
-	@${FALSE}
-.endif
-.endif
 
 pre-patch:
 .if defined(SVN_BUILD_ADDONS)
@@ -99,9 +80,7 @@ post-patch:
 .endif
 	@${REINPLACE_CMD} "s#^swig_pydir =.*#swig_pydir = ${PYTHON_SITELIBDIR}/libsvn#" ${WRKSRC}/Makefile.in
 	@${REINPLACE_CMD} "s#^swig_pydir_extra =.*#swig_pydir_extra = ${PYTHON_SITELIBDIR}/svn#" ${WRKSRC}/Makefile.in
-.if ( ${PORT_OPTIONS:MFREEBSD_TEMPLATE} || !${OPTIONS_FILE_UNSET:MFREEBSD_TEMPLATE} ) && defined(ORGANIZATION)
-	@${ECHO_CMD} "#define ORGANIZATION_NAME \"${ORGANIZATION}\"" > ${WRKSRC}/subversion/freebsd-organization.h
-.endif
+	@${REINPLACE_CMD} "s#^toolsdir =.*#toolsdir = @bindir@#" ${WRKSRC}/Makefile.in
 # shebangfix
 	@${FIND} ${WRKSRC}/tools/ -type f -exec ${GREP} -l -e '#!/bin/b' -e '#!/bin/env' \
 		-e '#!/usr/bin/p' {} + | ${XARGS} ${REINPLACE_CMD} -e \
