devel/dbus-glib: 114

--- a/devel/dbus-glib/Makefile
+++ b/devel/dbus-glib/Makefile
@@ -1,8 +1,7 @@
 PORTNAME=	dbus-glib
-PORTVERSION=	0.112
-PORTREVISION=	1
+PORTVERSION=	0.114
 CATEGORIES=	devel gnome
-MASTER_SITES=	http://dbus.freedesktop.org/releases/dbus-glib/
+MASTER_SITES=	https://dbus.freedesktop.org/releases/dbus-glib/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GLib bindings for the D-BUS messaging system
