--- a/graphics/png/Makefile
+++ b/graphics/png/Makefile
@@ -1,10 +1,9 @@
 PORTNAME=	png
-DISTVERSION=	1.6.43
+DISTVERSION=	1.6.47
 CATEGORIES=	graphics
 MASTER_SITES=	SF/lib${PORTNAME}/lib${PORTNAME}16/${DISTVERSION}/
-#PATCH_SITES=	SF/lib${PORTNAME}-apng/lib${PORTNAME}16/${DISTVERSION}/
+PATCH_SITES=	SF/lib${PORTNAME}-apng/lib${PORTNAME}16/${DISTVERSION}/
 # Keep this because you normally need to keep patch version in sync with release 
-PATCH_SITES=	SF/lib${PORTNAME}-apng/lib${PORTNAME}16/1.6.43/
 DISTNAME=	lib${PORTNAME}-${DISTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -26,7 +25,15 @@ CMAKE_TESTING_ON=	PNG_TESTS
 
 OPTIONS_DEFINE=	APNG SIMD
 OPTIONS_DEFAULT=APNG
+OPTIONS_DEFAULT_aarch64=	SIMD
 OPTIONS_DEFAULT_amd64=	SIMD
+OPTIONS_DEFAULT_powerpc64le=	SIMD
+# arm/arm_init.c:43:6: error: "No support for run-time ARM Neon checking; use compile-time options"
+.ifdef QEMU_EMULATING
+OPTIONS_EXCLUDE_armv6=	SIMD
+OPTIONS_EXCLUDE_armv7=	SIMD
+.endif
+
 APNG_DESC=Enable Animated PNG support
 
 SIMD_CMAKE_BOOL=	PNG_HARDWARE_OPTIMIZATIONS
@@ -41,7 +48,7 @@ CFLAGS+=	-maltivec -mvsx
 .if ${PORT_OPTIONS:MAPNG} || make(makesum)
 #PATCHFILES=	${DISTNAME}-apng.patch.gz:-p1
 # Keep this because you normally need to keep patch version in sync with release
-PATCHFILES=	lib${PORTNAME}-1.6.43-apng.patch.gz:-p1
+PATCHFILES=	lib${PORTNAME}-${DISTVERSION}-apng.patch.gz:-p1
 .endif
 
 post-patch:
