--- a/www/firefox/Makefile
+++ b/www/firefox/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	firefox
 PORTVERSION=	${VER}
-PORTREVISION=	7
+PORTREVISION=	8
 CATEGORIES=	www
 MASTER_SITES=	https://www.midnightbsd.org/ftp/MidnightBSD/distfiles/
 
@@ -11,13 +11,12 @@ WWW=		https://www.mozilla.com/firefox
 LICENSE=	mpl gpl2
 LICENSE_COMB=	dual
 
-LIB_DEPENDS+=	libicui18n.so:devel/icu \
-		libvpx.so:multimedia/libvpx \
+LIB_DEPENDS+=	libvpx.so:multimedia/libvpx \
 		libevent.so:devel/libevent \
 		libstartup-notification-1.so:x11/startup-notification \
 		libnspr4.so:devel/nspr \
 		libnss3.so:security/nss \
-		libicui18n.so.67:devel/icu \
+		libicui18n.so.72:devel/icu \
 		libharfbuzz.so:print/harfbuzz \
 		libgraphite2.so.3:graphics/graphite2 \
 		libpng16.so:graphics/png \
@@ -32,7 +31,7 @@ LIB_DEPENDS+=	libicui18n.so:devel/icu \
 		libdbus-glib-1.so:devel/dbus-glib \
 		libatk-1.0.so:accessibility/at-spi2-core \
 		libaom.so:multimedia/aom \
-		libdav1d.so:multimedia/dav1d
+		libdav1d.so.6:multimedia/dav1d
 
 USES=		compiler:c++17-lang cpe gl gettext gmake gnome iconv jpeg localbase perl5 pkgconfig \
 		desktop-file-utils tar:xz
@@ -53,15 +52,6 @@ NO_BUILD=	yes
 VER=	111
 DISTFILES=	firefox-111.0.1_1%2C2~4372c9f4c3.pkg
 COMPONENT=.12
-.elif ${OSVERSION} >= 200000
-VER=    80
-DISTFILES=      firefox-80.0.1,2.txz
-COMPONENT=.11
-.else
-VER=    63
-DISTFILES=      firefox-63.0_3,1.txz
-COMPONENT=.10
-MASTER_SITES+=	https://pkg.freebsd.org/FreeBSD:10:amd64/latest/All/
 .endif
 .endif
 
