--- a/devel/sonar-scanner-cli/Makefile
+++ b/devel/sonar-scanner-cli/Makefile
@@ -1,26 +1,25 @@
 PORTNAME=	sonar-scanner-cli
-DISTVERSION=	4.4.0.2170
-PORTREVISION=	0
+DISTVERSION=	6.2.1.4610
+PORTREVISION=	3
 CATEGORIES=	devel security www java
 MASTER_SITES=	https://binaries.sonarsource.com/Distribution/${PORTNAME}/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Scanner component of SonarQube
+WWW=		https://www.sonarqube.org/
 
 LICENSE=	lgpl3
 
 # node -> JS analysis
-RUN_DEPENDS=	node:www/node
-
-USES=		cpe zip
+USES=		cpe java nodejs:run zip
 CPE_VENDOR=	sonarsource
-USE_JAVA=	yes
+CPE_PRODUCT=	sonarqube_scanner
 
 WRKSRC=		${WRKDIR}/sonar-scanner-${DISTVERSION}
 
 NO_ARCH=	yes
 NO_BUILD=	yes
-JAVA_VERSION=	11+
+JAVA_VERSION=	17+
 JAVA_VENDOR=	openjdk
 
 APP_NAME=	${PORTNAME}
