--- a/devel/gmake/Makefile
+++ b/devel/gmake/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	make
 DISTVERSION=	4.4.1
 CATEGORIES=	devel
-MASTER_SITES=	GNU
+MASTER_SITES=	GNU/make
 PKGNAMEPREFIX=	g
 
 MAINTAINER=	ports@MidnightBSD.org
