--- a/devel/slf4j/Makefile
+++ b/devel/slf4j/Makefile
@@ -9,9 +9,8 @@ WWW=		https://www.slf4j.org/
 
 LICENSE=	mit
 
-USES=		cpe
+USES=		cpe java
 CPE_VENDOR=	qos
-USE_JAVA=	YES
 NO_BUILD=	YES
 
 JARFILES=	slf4j-migrator.jar \
