--- a/devel/Makefile
+++ b/devel/Makefile
@@ -377,6 +377,7 @@ SUBDIR += mono-addins
 SUBDIR += motor
 SUBDIR += msbuild
 SUBDIR += msgpack-c
+SUBDIR += mustache
 SUBDIR += nasm
 SUBDIR += ncurses
 SUBDIR += newt
