add nvi2 port.  nvi with multibyte support.

--- a/editors/Makefile
+++ b/editors/Makefile
@@ -26,6 +26,7 @@ SUBDIR += neovim
 SUBDIR += neovim-gtk
 SUBDIR += neovim-qt
 SUBDIR += nvi-devel
+SUBDIR += nvi2
 SUBDIR += openoffice-4
 SUBDIR += pico-alpine
 SUBDIR += py-editorconfig
