devel/log4j: use java

--- a/devel/log4j/Makefile
+++ b/devel/log4j/Makefile
@@ -9,8 +9,7 @@ WWW=		https://logging.apache.org/log4j/1.2/
 
 LICENSE=	apache2
 
-USES=		cpe
-USE_JAVA=	YES
+USES=		cpe java
 NO_BUILD=	YES
 CPE_VENDOR=	apache
 
