devel/apache-log4j2: 2.24.3

--- a/devel/apache-log4j2/Makefile
+++ b/devel/apache-log4j2/Makefile
@@ -1,5 +1,5 @@
 PORTNAME=	log4j2
-PORTVERSION=	2.20.0
+PORTVERSION=	2.24.3
 CATEGORIES=	devel java
 MASTER_SITES=	APACHE/logging/log4j/${PORTVERSION}
 PKGNAMEPREFIX=	apache-
@@ -12,18 +12,21 @@ WWW=		https://logging.apache.org/log4j/2.x/
 LICENSE=	apache2
 LICENSE_FILE=	${WRKSRC}/LICENSE.txt
 
-USES=		cpe
+USES=		cpe java zip
 
-USE_JAVA=	yes
-JAVA_VERSION=	8+
+NO_WRKSUBDIR=	yes
 NO_BUILD=	yes
 NO_ARCH=	yes
 CPE_VENDOR=	apache
 CPE_PRODUCT=	log4j
 
-PORTDOCS=	NOTICE.txt RELEASE-NOTES.md
+PORTDOCS=	NOTICE.txt RELEASE-NOTES.adoc
 
 OPTIONS_DEFINE=	DOCS
+
+pre-install:
+	# log4j-slf4j-impl cannot be present with log4j-to-slf4j
+	${RM} ${WRKSRC}/log4j-to-slf4j-${PORTVERSION}.jar
 
 do-install:
 	@${MKDIR} ${STAGEDIR}${JAVAJARDIR}
