--- a/textproc/xerces-c3/Makefile
+++ b/textproc/xerces-c3/Makefile
@@ -1,11 +1,13 @@
 PORTNAME=	xerces-c
-PORTVERSION=	3.2.5
+PORTVERSION=	3.3.0
 CATEGORIES=	textproc
 MASTER_SITES=	APACHE/xerces/c/3/sources
 PKGNAMESUFFIX=	3
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Validating XML parser from the Apache XML Project
+WWW=		https://xerces.apache.org/xerces-c/ \
+		https://github.com/apache/xerces-c
 
 LICENSE=	apache2
 LICENSE_FILE=	${WRKSRC}/LICENSE
