--- a/textproc/xerces-j/Makefile
+++ b/textproc/xerces-j/Makefile
@@ -1,17 +1,17 @@
 PORTNAME=	xerces-j
 PORTVERSION=	2.12.2
+PORTREVISION=	1
 CATEGORIES=	textproc java
 MASTER_SITES=	https://archive.apache.org/dist/xerces/j/binaries/
 DISTNAME=	Xerces-J-bin.${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	XML parser for Java
+WWW=		https://xerces.apache.org/xerces2-j/
 
 LICENSE=	apache2
 
-CONFLICTS=	xml4j-4.*
-
-USE_JAVA=	yes
+USES=		java
 NO_BUILD=	yes
 NO_ARCH=	yes
 
