--- a/textproc/xalan-j/Makefile
+++ b/textproc/xalan-j/Makefile
@@ -12,10 +12,9 @@ LICENSE=	apache2
 
 RUN_DEPENDS=	${JAVALIBDIR}/xml-apis.jar:textproc/xerces-j
 
-USES=		cpe
+USES=		cpe java
 CPE_PRODUCT=	xalan-java
 CPE_VENDOR=	apache
-USE_JAVA=	yes
 NO_BUILD=	yes
 
 WRKSRC=		${WRKDIR}/${PORTNAME}_${PORTVERSION:S/./_/g}
