--- a/textproc/apache-solr/Makefile
+++ b/textproc/apache-solr/Makefile
@@ -1,22 +1,22 @@
-# Created by: Gea-Suan Lin <gslin@gslin.org>
-
 PORTNAME=	apache-solr
-PORTVERSION=	8.11.2
+PORTVERSION=	9.8.0
 PORTREVISION=	0
 CATEGORIES=	textproc java
-MASTER_SITES=	https://archive.apache.org/dist/lucene/solr/${PORTVERSION}/
+MASTER_SITES=	https://archive.apache.org/dist/solr/solr/${PORTVERSION}/
 DISTNAME=	solr-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	High performance search server built using Lucene Java
+WWW=		https://lucene.apache.org/solr/
 
 LICENSE=	apache2
 
 RUN_DEPENDS=	bash:shells/bash
 
 USES=		cpe java tar:tgz
+CPE_VENDOR=	apache
+CPE_PRODUCT=	solr
 JAVA_VERSION=	11+
-JAVA_RUN=	yes
 NO_BUILD=	yes
 NO_ARCH=	yes
 PLIST_SUB+=	PORTVERSION="${PORTVERSION}"
@@ -37,11 +37,11 @@ JTS_RUN_DEPENDS=	jts>0:math/jts
 do-install:
 	${FIND} ${WRKSRC} -name '*.orig' -delete
 	cd ${WRKSRC} && ${COPYTREE_SHARE} . ${STAGEDIR}${PREFIX}/${CPE_PRODUCT}
-	${INSTALL_SCRIPT} ${WRKSRC}/bin/oom_solr.sh ${STAGEDIR}${PREFIX}/${CPE_PRODUCT}/bin
 	${INSTALL_SCRIPT} ${WRKSRC}/bin/post ${STAGEDIR}${PREFIX}/${CPE_PRODUCT}/bin
 	${INSTALL_SCRIPT} ${WRKSRC}/bin/postlogs ${STAGEDIR}${PREFIX}/${CPE_PRODUCT}/bin
 	${INSTALL_SCRIPT} ${WRKSRC}/bin/solr ${STAGEDIR}${PREFIX}/${CPE_PRODUCT}/bin
 	${INSTALL_DATA} ${WRKSRC}/bin/solr.in.sh ${STAGEDIR}${PREFIX}/etc/solr.in.sh.sample
+	${ECHO} '' >> ${STAGEDIR}${PREFIX}/etc/solr.in.sh.sample
 	${ECHO} 'SOLR_HOME="/var/db/solr"' >> ${STAGEDIR}${PREFIX}/etc/solr.in.sh.sample
 	${ECHO} '# LOG4J_PROPS="/var/db/solr/log4j2.xml"' >> ${STAGEDIR}${PREFIX}/etc/solr.in.sh.sample
 	${ECHO} 'SOLR_LOGS_DIR="/var/log/solr"' >> ${STAGEDIR}${PREFIX}/etc/solr.in.sh.sample
