--- a/textproc/elasticsearch7/Makefile
+++ b/textproc/elasticsearch7/Makefile
@@ -15,8 +15,7 @@ BUILD_DEPENDS=	jna>0:devel/jna
 RUN_DEPENDS=	bash>0:shells/bash \
 		jna>0:devel/jna
 
-USES=		cpe shebangfix
-USE_JAVA=	yes
+USES=		cpe java shebangfix
 JAVA_VERSION=	11+
 USE_RC_SUBR=	${PORTNAME}
 
@@ -35,6 +34,7 @@ CONFLICTS=	elasticsearch6 elasticsearch8
 
 NO_ARCH=	yes
 NO_BUILD=	yes
+PORTSCOUT=	limit:^7
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
 OPTIONS_DEFINE=	DOCS
