sysutils/lsof: cleanup

--- a/sysutils/lsof/Makefile
+++ b/sysutils/lsof/Makefile
@@ -41,11 +41,11 @@ IGNORE+=	requires kernel sources
 .endif
 
 do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/lsof ${STAGEDIR}${PREFIX}/sbin
+	${INSTALL_PROGRAM} ${WRKSRC}/lsof ${PREFIX}/sbin
 	(cd ${WRKSRC} && /usr/bin/soelim Lsof.8 > ${WRKSRC}/lsof.8)
-	${INSTALL_MAN} ${WRKSRC}/lsof.8 ${STAGEDIR}${MAN8PREFIX}/man/man8/lsof.8
+	${INSTALL_MAN} ${WRKSRC}/lsof.8 ${PREFIX}/share/man/man8/lsof.8
 	@${MKDIR} ${STAGEDIR}${PREFIX}/share/lsof
-	${INSTALL_SCRIPT} ${WRKSRC}/scripts/* ${STAGEDIR}${PREFIX}/share/lsof
-	@${CHMOD} 0444 ${STAGEDIR}${PREFIX}/share/lsof/00*
+	${INSTALL_SCRIPT} ${WRKSRC}/scripts/* ${PREFIX}/share/lsof
+	@${CHMOD} 0444 ${PREFIX}/share/lsof/00*
 
 .include <bsd.port.post.mk>
