--- a/devel/autogen/Makefile
+++ b/devel/autogen/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	autogen
 PORTVERSION=	5.18.16
+PORTREVISION=	2
 CATEGORIES=	devel
 MASTER_SITES=	GNU/autogen/rel${PORTVERSION}
 
@@ -12,10 +13,9 @@ LICENSE_FILE=	${WRKSRC}/COPYING
 
 BUILD_DEPENDS=	${RUN_DEPENDS} \
 		gmktemp:sysutils/coreutils
-LIB_DEPENDS=	libguile-2.2.so:lang/guile2
 RUN_DEPENDS=	bash:shells/bash
 
-USES=		gmake gnome libtool pathfix perl5 pkgconfig shebangfix tar:xz
+USES=		gmake gnome guile:2.2 libtool pathfix perl5 pkgconfig shebangfix tar:xz
 USE_GNOME=	libxml2
 USE_PERL5=	build
 
@@ -34,7 +34,7 @@ INFO=		autogen
 # bin/columns
 CONFLICTS_INSTALL=	columns
 
-#SHEBANG_FILES=	autoopts/tpl/*.pl
+SHEBANG_FILES=	autoopts/tpl/*.pl
 
 NO_TEST=	yes
 
