--- a/devel/rcs57/Makefile
+++ b/devel/rcs57/Makefile
@@ -1,5 +1,6 @@
 PORTNAME=	rcs
 PORTVERSION=	5.7
+PORTREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	GNU
 PKGNAMESUFFIX=	57
@@ -14,9 +15,10 @@ OPTIONS_DEFINE=	FREEBSD
 OPTIONS_DEFAULT=	FREEBSD
 FREEBSD_DESC=	Apply FreeBSD patches
 
-CONFLICTS=	rcs-5.[89]*
+CONFLICTS=	rcs
 
-USES=		desthack gmake
+USES=		autoreconf desthack gmake
+USE_CSTD=	gnu89
 GNU_CONFIGURE=	yes
 MAKE_JOBS_UNSAFE=	yes
 
