fix license, man

--- a/archivers/lcab/Makefile
+++ b/archivers/lcab/Makefile
@@ -1,12 +1,6 @@
-# New ports collection makefile for:	LCAB
-# Date created:				27 May 2005
-# Whom:					Alexey Dokuchaev <danfe@FreeBSD.org>
-#
-
-#
-
 PORTNAME=	lcab
 PORTVERSION=	1.0b12
+PORTREVISION=	1
 CATEGORIES=	archivers
 MASTER_SITES=	DEBIAN
 DISTFILES=	${PORTNAME}_${PORTVERSION}.orig${EXTRACT_SUFX}
@@ -14,12 +8,12 @@ DISTFILES=	${PORTNAME}_${PORTVERSION}.orig${EXTRACT_SUFX}
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Microsoft .CABinet file creator
 
-LICENSE=	gpl2
+LICENSE=	gpl2+
 
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION}
 
 MAKE_ARGS=	CC="${CC}" CFLAGS="${CFLAGS}"
-PLIST_FILES=	bin/lcab man/man1/${PORTNAME}.1.gz
+PLIST_FILES=	bin/lcab share/man/man1/${PORTNAME}.1.gz
 
 pre-build:
 	@${REINPLACE_CMD} -e 's|1.0b11|1.0b12|' ${WRKSRC}/mytypes.h
@@ -28,7 +22,7 @@ pre-build:
 		${WRKSRC}/${PORTNAME}.1
 
 do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/${PORTNAME} ${STAGEDIR}/${PREFIX}/bin
-	${INSTALL_MAN} ${WRKSRC}/${PORTNAME}.1 ${STAGEDIR}${MAN1PREFIX}/man/man1
+	${INSTALL_PROGRAM} ${WRKSRC}/${PORTNAME} ${PREFIX}/bin
+	${INSTALL_MAN} ${WRKSRC}/${PORTNAME}.1 ${PREFIX}/share/man/man1
 
 .include <bsd.port.mk>
