--- a/net-mgmt/prometheus-collectd-exporter/Makefile
+++ b/net-mgmt/prometheus-collectd-exporter/Makefile
@@ -1,10 +1,12 @@
 PORTNAME=	prometheus-collectd-exporter
 PORTVERSION=	0.5.0
 DISTVERSIONPREFIX=	v
+PORTREVISION=	1
 CATEGORIES=	net-mgmt
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Collectd exporter for Prometheus
+WWW=		https://github.com/prometheus/collectd_exporter
 
 LICENSE=	apache2
 LICENSE_FILE=	${WRKSRC}/LICENSE
@@ -13,6 +15,11 @@ USES=		go gmake
 USE_GITHUB=	yes
 GH_ACCOUNT=	prometheus
 GH_PROJECT=	collectd_exporter
+GH_TUPLE=	golang:sys:v0.6.0:sys
+
+pre-patch:
+	${RM} -r ${WRKSRC}/vendor/golang.org/x/sys
+	${LN} -s ${WRKDIR}/sys-* ${WRKSRC}/vendor/golang.org/x/sys
 
 PLIST_FILES=	bin/prometheus-collectd-exporter
 
