devel/gnulib: fix install

--- a/devel/gnulib/Makefile
+++ b/devel/gnulib/Makefile
@@ -1,5 +1,3 @@
-
-
 PORTNAME=	gnulib
 PORTVERSION=	20140202
 PORTREVISION=	1
@@ -9,15 +7,22 @@ DISTNAME=	${PORTNAME}-${PORTVERSION}-stable
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GNU portability library
+WWW=		https://www.gnu.org/software/gnulib/
 
 LICENSE=	lgpl gpl2 lgpl2.1 gpl3 lgpl3
 LICENSE_COMB=	multi
 
-BUILD_DEPENDS=	${LOCALBASE}/bin/makeinfo:${PORTSDIR}/print/texinfo
+BUILD_DEPENDS=	${LOCALBASE}/bin/makeinfo:print/texinfo
 
-USES=		gmake perl5 shebangfix
-SHEBANG_FILES=	check-module
+USES=		cpe gmake perl5 shebangfix
+SHEBANG_FILES=	check-module lib/uniname/gen-uninames.lisp
+CPE_VENDOR=	gnu
 
+NO_ARCH=	yes
+
+BUILD_WRKSRC=	${WRKSRC}/doc
+ALL_TARGET=	info html
+PLIST_FILES=	bin/check-module bin/gnulib-tool
 INFO=		${PORTNAME}
 PORTDOCS=	gnulib.html
 PORTDATA=	*
@@ -25,25 +30,22 @@ PORTDATA=	*
 OPTIONS_DEFINE=	DOCS
 
 post-patch:
-	${REINPLACE_CMD} -e 's/date -u.*/stat -f %Sa -t "@set UPDATED %F %T" `ls -t $$^ | sed 1q` > $$@/' \
+	@${REINPLACE_CMD} -e 's,date -u.*,stat -f %Sa -t "@set UPDATED %F %T" `${LS} -t $$^ | ${SED} 1q` > $$@,' \
 		-e 's: makeinfo$$: ${LOCALBASE}/bin/makeinfo:' \
 		${WRKSRC}/doc/Makefile
 
-do-build:
-	cd ${WRKSRC} && ${SETENV} ${MAKE_ENV} ${MAKE_CMD} -C doc info html
-
 do-install:
-	${MKDIR} ${DATADIR} ${PREFIX}/${INFO_PATH}
-	for p in check-module gnulib-tool;\
-		do ${INSTALL_SCRIPT} ${WRKSRC}/$$p ${DATADIR};\
-			cd ${PREFIX}/bin;\
-			${LN} -s ../${DATADIR_REL}/$$p;\
-		done
+	${MKDIR} ${STAGEDIR}${DATADIR} ${STAGEDIR}${PREFIX}/${INFO_PATH}
+.for p in check-module gnulib-tool
+	${INSTALL_SCRIPT} ${WRKSRC}/${p} ${STAGEDIR}${DATADIR}/
+	${LN} -s ../${DATADIR_REL}/${p} ${STAGEDIR}${PREFIX}/bin/
+.endfor
 	${TAR} -cf - -C ${WRKSRC} build-aux config doc lib m4 modules \
-		tests top | ${TAR} -xof - -C ${DATADIR}
-	${INSTALL_DATA} ${WRKSRC}/doc/gnulib.info \
-		${PREFIX}/${INFO_PATH}
-	${MKDIR} ${DOCSDIR}
-	${INSTALL_DATA} ${WRKSRC}/doc/gnulib.html ${DOCSDIR}
+		tests top | ${TAR} -xof - -C ${STAGEDIR}${DATADIR}
+	${INSTALL_DATA} ${WRKSRC}/doc/gnulib.info ${STAGEDIR}${PREFIX}/${INFO_PATH}
+
+do-install-DOCS-on:
+	@${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
+	${INSTALL_DATA} ${WRKSRC}/doc/gnulib.html ${FAKE_DESTDIR}${DOCSDIR}
 
 .include <bsd.port.mk>
