--- a/net/Makefile
+++ b/net/Makefile
@@ -88,6 +88,7 @@ SUBDIR += libslirp
 SUBDIR += libsrtp2
 SUBDIR += libutp
 SUBDIR += libvncserver
+SUBDIR += libwebsockets
 SUBDIR += libzapojit
 SUBDIR += libzmq4
 SUBDIR += liferea
@@ -103,6 +104,7 @@ SUBDIR += luasocket
 SUBDIR += mDNSResponder
 SUBDIR += malo-firmware-kmod
 SUBDIR += miniupnpc
+SUBDIR += mosquitto
 SUBDIR += motsognir
 SUBDIR += mtr
 SUBDIR += mtr-nox11
@@ -185,6 +187,7 @@ SUBDIR += py-netaddr
 SUBDIR += py-netifaces
 SUBDIR += py-ntplib
 SUBDIR += py-oauth2
+SUBDIR += py-paho-mqtt
 SUBDIR += py-portend
 SUBDIR += py-pysendfile
 SUBDIR += py-pysocks
